resolved issue with empty lists container causing menu bar to shift to the middle of the screen

--- a/src/style.css
+++ b/src/style.css
@@ -144,9 +144,11 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   width: 85vw;
   cursor: pointer;
   padding-top: 200px;
+  min-height: 400px;
 }
 
 .list-container {
